<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#191F36">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonCreateEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                app:cardCornerRadius="8dp"-->
<!--                app:cardElevation="4dp"-->
<!--                app:cardBackgroundColor="#F4EDED">-->

                <LinearLayout
                    android:layout_width="367dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#4AA7CAC0"
                    android:padding="16dp">

                    <!-- Event Name -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Event Name"
                        android:textColor="@color/white"
                        android:textSize="18dp"/>

                    <EditText
                        android:id="@+id/editTextEventName"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/white"
                        android:hint="Enter event name"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:background="@drawable/edittext_rounded"/>

                <!-- Event Start Date and Time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Event Start Date"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/eventStartTime"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:focusable="false"
                    android:hint="Select start date"
                    android:inputType="none"
                    android:textColor="@color/white"
                    android:background="@drawable/edittext_rounded"/>

                <!-- Event End Date and Time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="  Event End Date"
                    android:textSize="18dp"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/eventEndTime"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:focusable="false"
                    android:hint="Select end date "
                    android:background="@drawable/edittext_rounded"
                    android:inputType="none"
                    android:textColor="@color/white" />

                <!-- Registration End Time -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Registration End Date"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/registrationDeadline"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:focusable="false"
                    android:hint="Registration end date"
                    android:inputType="none"
                    android:textColor="@color/white"
                    android:background="@drawable/edittext_rounded"/>

                <!-- Event Price -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Event Price"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/eventPrice"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:hint="Enter event price"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edittext_rounded"
                    android:textColor="@color/white" />

                <!-- Number of Members -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Number of Members (NL-No Limit)"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <!-- Waitlist Capacity -->
                <EditText
                    android:id="@+id/editNumberOfMembers"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:hint="Enter number of members"
                    android:background="@drawable/edittext_rounded"
                    android:inputType="number"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Waitlist Capacity (Optional)"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/editWaitlistCap"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:hint="Enter waitlist capacity"
                    android:inputType="number"
                    android:background="@drawable/edittext_rounded"
                    android:textColor="@color/white"
                    android:visibility="visible" />

                <!-- Event Description -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="Event Description"
                    android:textColor="@color/white"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/editTextEventDescription"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/white"
                    android:hint="Enter event description"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:background="@drawable/edittext_rounded"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="367dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/uploadPosterGeolocationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="    Upload Poster                   Geolocation"
                            android:textColor="@color/white"
                            android:textSize="18dp"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- Upload Poster Button -->
                        <ImageButton
                            android:id="@+id/buttonUploadPoster"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="Upload Poster"
                            android:src="@drawable/ic_upload_icon"
                            android:background="@drawable/edittext_rounded"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <!-- Remove Poster Button -->
                        <Button
                            android:id="@+id/buttonRemovePoster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/edittext_rounded"
                            android:text="Remove Poster"
                            android:textColor="@color/white"
                            android:visibility="gone"
                            app:layout_constraintStart_toEndOf="@id/buttonUploadPoster"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <!-- Geo Toggle Switch -->
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/geo_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/buttonRemovePoster"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
                </LinearLayout>
<!--            </androidx.cardview.widget.CardView>-->
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCreateEvent"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#0A4753"
        android:text="Create Event"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>