...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/organizerButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#352E48"
            android:text="I am an Organizer"
            android:textColor="@android:color/white" />
...
